--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -15,11 +15,11 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": false,
-    "jsx": "react-jsx",
-    "baseUrl": ".",
-    "paths": {
-      "@/*": ["src/*"]
-    }
+    "jsx": "react-jsx"
+    // "baseUrl": "."
+    // "paths": {
+    //   "@/*": ["src/*"]
+    // }
   },
   "include": ["src"]
 }
