--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,8 +26,7 @@
     "webpack-cli": "^5.0.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "start1": "webpack serve --config webpack.config.js --open",
+    "start": "webpack serve --config webpack.config.js --open",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
