--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,7 @@
 {
   "name": "frontend",
   "version": "0.1.0",
+  "homepage": ".",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.10.6",
@@ -15,7 +16,6 @@
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.10",
     "iso8601-duration": "^2.1.1",
-    "query-string": "^8.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^5.3.4",
@@ -27,8 +27,8 @@
     "webpack-cli": "^5.0.1"
   },
   "scripts": {
-    "start": "webpack serve --config webpack.config.js --open",
-    "build": "react-scripts build",
+    "start": "NODE_ENV=development webpack serve --open",
+    "build": "NODE_ENV=production webpack ",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -51,26 +51,29 @@
     ]
   },
   "devDependencies": {
-    "@babel/core": "^7.20.12",
+    "@babel/core": "^7.21.0",
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
     "@types/react-router-dom": "^5.3.3",
     "@types/styled-components": "^5.1.26",
     "@vitejs/plugin-react": "^3.1.0",
-    "autoprefixer": "^10.4.13",
     "babel-loader": "^9.1.2",
+    "babel-plugin-styled-components": "^2.0.7",
+    "bundle-loader": "^0.5.6",
+    "clean-webpack-plugin": "^4.0.0",
+    "compression-webpack-plugin": "^10.0.0",
     "css-loader": "^6.7.3",
+    "css-minimizer-webpack-plugin": "^4.2.2",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.7.2",
     "node-sass": "^7.0.3",
-    "postcss-loader": "^7.0.2",
     "sass-loader": "^13.2.0",
     "style-loader": "^3.3.1",
     "ts-loader": "^9.4.2",
-    "vite": "^4.1.2",
     "webpack": "^5.75.0",
-    "webpack-dev-server": "^4.11.1"
+    "webpack-dev-server": "^4.11.1",
+    "webpack-merge": "^5.8.0"
   },
   "resolutions": {
     "styled-components": "^5"
