--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,7 +28,7 @@
   },
   "scripts": {
     "start": "NODE_ENV=development webpack serve --open",
-    "build": "NODE_ENV=production webpack ",
+    "build": "NODE_ENV=production webpack && cd ../backend && tsc",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
